@@ -1,4 +1,8 @@
 release 1.1.3-ea (2009-11)
+- Fixed issue 363
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=363
+  Fixed for parameters when a String-based constructor is utlized with a
+  @DefaultValue("").
 - Fixed issue 359
   https://jersey.dev.java.net/issues/show_bug.cgi?id=359
   The client API should use the default media type "application/octet-stream"
